package versioning & updating

--- a/1-node-farm/package.json
+++ b/1-node-farm/package.json
@@ -9,6 +9,7 @@
   "author": "Abdurakhmon Otajonov",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
