--- a/4-natours/package.json
+++ b/4-natours/package.json
@@ -4,12 +4,13 @@
   "description": "Learning node.js, express and mongoDB",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon server.js"
   },
   "author": "Abdurakhmon",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20"
   }
 }
