--- a/4-natours/config.env
+++ b/4-natours/config.env
@@ -1,1 +1,3 @@
-PORT = 3001
+PORT = 3000
+DATABASE = mongodb+srv://Abdurakhmon:<PASSWORD>@cluster0.tlylt1y.mongodb.net/natours
+DATABASE_PASSWORD = zG7cykftHKzz3WYF
